# sensegrep

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  build.js  bunfig.toml  package-lock.json  package.json  server.json  test_python.py  tsconfig.json  vitest.config.ts
.changeset/: README.md  bounded-agent-evidence.md  bright-evidence-agents.md  c08d21be.md  chilled-zoos-marry.md  config.json  few-apes-lie.md  few-bears-juggle.md  fix-embedding-validation-vscode-provider.md  fix-indexing-bedrock-vue.md  four-suits-clean.md  fresh-seahorses-dream.md  funny-buses-bow.md  minimal-agent-json.md  rate-limit-retry.md  red-owls-tie.md  remote-only-embeddings.md  small-badgers-shop.md  strict-agent-contracts.md  strict-agent-output.md  vue-semantic-support.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS  pull_request_template.md
benchmark/: README.md  generate-promptfoo-tests.py  promptfooconfig-pilot.yaml  promptfooconfig.yaml  tests-pilot.json
crates/fastembed-server/: Cargo.toml
crates/fastembed-server/src/: main.rs
demo/: package.json  tsconfig.json
demo/src/: Root.tsx  (+3 more)
docs/: agent-skills.md  architecture.md  case-studies.md  cli-reference.md  community-discussions-seed.md  distribution.md  fastembed-rs-sidecar.md  getting-started.md  mcp-setup.md  multilingual-architecture.md  parallel-agents.md  traction.md  use-cases.md  week1-launch-checklist.md
scripts/: check-version-consistency.mjs  publish-changesets.mjs  sync-versions.mjs  (+1 more)
(+81 files in other folders)
