[package]
name = "sensegrep-fastembed-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Experimental OpenAI-compatible fastembed-rs sidecar for Sensegrep jina-code embeddings"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
fastembed = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
